# automatic-waffle

./: .travis.yml  HowToHitTheGroundRunningTest.hs  LICENSE  README.md  how-to-hit-the-ground-running-with-uu-parsinglib.lhs  how-to-hit-the-ground-running-with-uu-parsinglib.md  introduction.markdown  parser-combinators-and-uu-parsinglib.markdown  stack.yaml  uu-parsinglib-tutorial.cabal
