name:                uu-parsinglib-tutorial
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/pepijnkokke/uu-parsinglib-tutorial#readme
license:             MIT
license-file:        LICENSE
author:              Pepijn Kokke
maintainer:          pepijnkokke@gmail.com
copyright:           2015
category:            Test
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <5
                     , uu-parsinglib
                     , unlit >=0.3.2.1
                     , inflections ==0.2.0.0
  exposed-modules:     HowToHitTheGroundRunning
  ghc-options:         -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=backtickfence
  extensions:          GADTs, FlexibleContexts, RankNTypes
  default-language:    Haskell2010

  
test-suite HowToHitTheGroundRunningTest
  type:                exitcode-stdio-1.0
  main-is:             HowToHitTheGroundRunningTest.hs
  build-depends:       base >=4.7 && <5
                     , uu-parsinglib
                     , unlit >=0.3.2.1
                     , uu-parsinglib-tutorial
                     , inflections ==0.2.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -pgmL unlit -optL--ghc -optL--language=haskell -optL--from=backtickfence
  extensions:          GADTs, FlexibleContexts, RankNTypes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pepijnkokke/uu-parsinglib-tutorial
